--- a/papers/IPC2011_DAE/dae_mt.bib
+++ b/papers/IPC2011_DAE/dae_mt.bib
@@ -149,7 +149,7 @@ OpenMP
 
 @InProceedings{yahsp:ipc:2011,
   author={Vidal, Vincent},
-  title={{YAHSP2: Keep it Simple, Stupid}},
+  title={{YAHSP2: Keep It Simple, Stupid}},
   booktitle={$7^{th}$ International Planning Competition (IPC-2011), Deterministic Part},
   year={2011}
 }
