with the right contract number!

--- a/papers/IPC2011_DAE/ipc_dae_2011.tex
+++ b/papers/IPC2011_DAE/ipc_dae_2011.tex
@@ -172,7 +172,7 @@ In order to speed up the search, a memoing mechanism has been introduced in \YAH
 \section{Conclusion}
 
 \section{Acknowledgments}
-This work is being partially funded by the French National Research Agency (ANR) through the COSINUS programme, under the research contract DESCARWIN (ANR-09-COSI-002-01).
+This work is being partially funded by the French National Research Agency (ANR) through the COSINUS programme, under the research contract DESCARWIN (ANR-09-COSI-002).
 
 
 \bibliographystyle{aaai}
