* dae_mt.tex: typos

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -657,7 +657,7 @@ OpenMP let the choice between static and dynamic task scheduling. The default on
 In the static scheduling, a loop iterating through a set of tasks will be
 divided in several tasks according to the number of available processors.
 Regarding dynamic scheduling, during the runtime if one thread has finished
-these tasks it get the next available one, in a queue.
+these tasks it gets the next available one, in a queue.
 
 % some hypotheses
 
