* dae_mt.tex: typos

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -681,7 +681,7 @@ these tasks it gets the next available one, in a queue.
 \end{figure}
 
 Figure \ref{fig:proc_static_vs_dynamic} shows that the dynamic parallelization
-scheme does not permits a significant speed-up comparing to the static one. The
+scheme does not permit a significant speed-up comparing to the static one. The
 Wilcoxon signed-rank test cannot reject the null hypothesis that the samples come
 from the same distribution ($p=0.03$).
 
