* dae_mt.tex: typos

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -698,7 +698,7 @@ from the same distribution ($p=0.03$).
 \end{figure}
 
 Figure \ref{fig:elevators_pop} shows that the median computation time on a
-multicore machine increase linearly with the size of the population. The
+multicore machine increases linearly with the size of the population. The
 dispersions of the distribution is due to the steady-state stopping criterion
 that may be reached after different times, with a higher probability when the
 population size is small.
