--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -68,8 +68,7 @@
 %\title{Multithreading the Divide-and-Evolve Algorithm for a Multicore Machine}
 %\title{A Multithreaded Release of the Divide-and-Evolve Planning System for a Multicore Machine}
 %\title{A Multicore Implementation of the Individual Evaluation in the Divide-and-Evolve Planner}
-\title{Parallel Divide-and-Evolve: Experiments with OpenMP on a Multicore Machine
-\thanks{This work is being partially funded by Agence Nationale de la Recherche under research contract ANR-09-COSI-002-01.}}
+\title{Parallel Divide-and-Evolve:\\ Experiments with OpenMP on a Multicore Machine}
 
 \numberofauthors{2} % 4 is a bug!
 
@@ -769,10 +768,9 @@ premature convergence.
 
 
 
+\section{Acknowledgments}
+This work is being partially funded by the French National Research Agency through the COSINUS programme, under the research contract DESCARWIN (ANR-09-COSI-002).
 
-
-%ACKNOWLEDGMENTS are optional
-%\section{Acknowledgments}
 
 %
 % The following two commands are all you need in the
